fix: more cms mobile styling

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -7,9 +7,9 @@
     <meta name="robots" content="none">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="netlify-identity.js"></script>
-    <script defer src="react.production.min.js">
-    </script><script defer src="react-dom.production.min.js">
-    </script><script defer src="netlify-cms-app.js"></script>
+    <script defer src="react.production.min.js"></script>
+    <script defer src="react-dom.production.min.js"></script>
+    <script defer src="netlify-cms-app.js"></script>
     <script defer src="cms.js"></script>
 
     <style>
@@ -20,7 +20,35 @@
           margin-bottom: 30px;
         }
 
-        .css-v758ki-AppMainContainer, .css-12b66la-AppHeaderContent {
+        * {
+          max-width: 100vw;
+        }
+
+        .Pane2 {
+          display: none;
+        }
+
+        .css-1bc2a6h-Editor {
+          margin-left: 0px !important;
+        }
+
+        div.css-2oej7z-ToolbarContainer {
+          position: static;
+          flex-direction: column;
+          height: auto;
+          gap: 8px;
+          min-width: 100px;
+        }
+
+        header.css-y7r3-AppHeader {
+          height: 160px;
+        }
+
+        .css-12b66la-AppHeaderContent, .css-12zz42a-AppHeaderNavList {
+          flex-direction: column;
+        }
+
+        div.css-v758ki-AppMainContainer, div.css-12b66la-AppHeaderContent {
           min-width: 0;
         }
 
@@ -103,9 +131,10 @@
         /* End Media */
 
         /* Blog */
-        .css-hn3jn7-EditorContainer {
+        div.css-hn3jn7-EditorContainer {
           min-width: 0;
-          padding-top: 100px;
+          top: 160px;
+          padding-top: 10px;
         }
 
         .css-2oej7z-ToolbarContainer {
