fix: more styling, site title and description

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -57,7 +57,7 @@
           padding: 16px 7px;
         }
 
-        .css-1f7nhiq-CollectionMain {
+        main.css-1f7nhiq-CollectionMain {
           padding-left: 0;
         }
 
