fix: make top header unsticky

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -42,6 +42,8 @@
 
         header.css-y7r3-AppHeader {
           height: 160px;
+          position: static;
+          top: revert;
         }
 
         .css-12b66la-AppHeaderContent, .css-12zz42a-AppHeaderNavList {
