fix: no more absolute

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -135,8 +135,8 @@
         /* Blog */
         div.css-hn3jn7-EditorContainer {
           min-width: 0;
-          top: 160px;
           padding-top: 10px;
+          position: relative;
         }
 
         .css-2oej7z-ToolbarContainer {
@@ -167,7 +167,11 @@
           display: none;
         }
 
-        .SplitPane.css-7d7n9g-StyledSplitPane-card-splitPane.e1pxf6c41.vertical {
+        div.SplitPane {
+          position: relative !important;
+        }
+
+        div.SplitPane.css-7d7n9g-StyledSplitPane-card-splitPane.e1pxf6c41.vertical {
           display: block !important;
         }
 
