fix: image upload styling

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -73,63 +73,63 @@
         }
 
         /* Media */
-        .css-1f3mf5k-StyledModal {
+        div.css-1f3mf5k-StyledModal {
           padding: 15px;
-          grid-template-rows: 190px auto;
+          grid-template-rows: 240px auto;
         }
 
-        .css-svjxk-SearchContainer {
-          display: block;
+        div.css-svjxk-SearchContainer {
           width: 100%;
         }
 
-        .css-smzvtl-LibraryTop {
+        div.css-smzvtl-LibraryTop {
           flex-direction: column;
         }
 
-        .css-3ifd9s-ActionsContainer {
+        div.css-3ifd9s-ActionsContainer {
           text-align: center;
         }
 
-        .css-1ih1y1j-LibraryTitle {
+        div.css-1ih1y1j-LibraryTitle {
           margin-bottom: 15px;
         }
 
-        .css-2ptjc9-UpperActionsContainer {
+        div.css-2ptjc9-UpperActionsContainer {
           display: inline-block;
         }
 
-        .css-1qukh7n-DownloadButton-button-default-disabled-button {
+        div.css-1qukh7n-DownloadButton-button-default-disabled-button {
           margin-left: 0;
           margin-right: 0;
         }
 
-        .css-13rmovq-StyledUploadButton-button-default-disabled-button-gray {
+        div.css-13rmovq-StyledUploadButton-button-default-disabled-button-gray {
           margin-left: 10px;
         }
 
-        .css-1hpjyse-DeleteButton-button-default-disabled-button-lightRed {
+        div.css-1hpjyse-DeleteButton-button-default-disabled-button-lightRed {
           margin-top: 10px;
           margin-left: 0;
           margin-right: 0;
         }
 
-        .css-1s67tkf-InsertButton-button-default-disabled-button-green {
+        div.css-1s67tkf-InsertButton-button-default-disabled-button-green {
           margin-top: 10px;
           margin-left: 10px;
         }
 
-        .css-16796rj-LowerActionsContainer {
+        div.css-16796rj-LowerActionsContainer {
           display: inline-block;
           margin-top: 0;
         }
 
-        .css-stmjdx-CardGridContainer  {
+        div.css-stmjdx-CardGridContainer  {
           position: static;
           overflow: visible;
           width: 100%;
-          padding-top: 20px;
+          padding-top: 0px;
         }
+
         /* End Media */
 
         /* Blog */
